# rust_repo

./: .gitignore
a_simple_chat_server/: Cargo.toml
a_simple_chat_server/src/: lib.rs  main.rs
crate_test/: Cargo.toml
crate_test/hello_macro_derive/: Cargo.toml
crate_test/src/: lib.rs  main.rs
crate_test/tests/: post_test.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_rocket/: Cargo.toml
hello_rocket/src/: main.rs
hello_rust/: Cargo.toml
hello_rust/src/: main.rs
minigrep/: Cargo.toml  test.txt
minigrep/src/: lib.rs  main.rs
minigrep/tests/: minigrep_test.rs
rectangle/: Cargo.toml
rectangle/src/: main.rs
rust_src_training/: Mybox.rs  counter.rs  thread_training.rs
simple_web_server/: Cargo.toml
simple_web_server/src/: lib.rs  main.rs
simple_web_server/static/: 404.html  hello.html
training/: Cargo.toml
workspace_learning/: Cargo.toml
workspace_learning/bench_example/: Cargo.toml
workspace_learning/bench_example/.criterion/fibonacci 8/change/: estimates.json
workspace_learning/bench_example/.criterion/fibonacci 8/new/: estimates.json  sample.json  tukey.json
workspace_learning/bench_example/.criterion/fibonacci 8/new 2/: estimates.json  sample.json  tukey.json
workspace_learning/bench_example/.criterion/fibonacci 8/new 3/: estimates.json  sample.json  tukey.json
workspace_learning/bench_example/benchs/: fibonacci.rs
workspace_learning/bench_example/src/: lib.rs
workspace_learning/rudis_async/: Cargo.toml
workspace_learning/rudis_async/src/: codec.rs  main.rs
(+28 files in other folders)
